debugging JSheet not releasing KeyEventDispatcher